--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="escolaridade.html">escolaridade</a> </li>
         <li><a href="cidade.html">Cidade</a></li>
         <li><a href="contatos.html">contatos</a></li>
+        <li><a href="index.html">Menu</a></li>
     </ul>  
 
     <h1>
