--- a/biografia.html
+++ b/biografia.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="stylo2.css">
 <head>
     <ul id="Menu-h">
-        <li><a href="site_Jacquet.html">Menu</a></li>
+        <li><a href="index.html">Menu</a></li>
         <li><a href="biografia.html">Biografia</a></li>
         <li><a href="escolaridade.html">escolaridade</a> </li>
         <li><a href="cidade.html">Cidade</a></li>
