--- a/cidade.html
+++ b/cidade.html
@@ -1,7 +1,15 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <link rel="stylesheet" href="stilo3.css">
 
 <head>
+    <ul id="Menu-h">
+        <li><a href="index.html">Menu</a></li>
+        <li><a href="biografia.html">Biografia</a></li>
+        <li><a href="escolaridade.html">escolaridade</a> </li>
+        <li><a href="cidade.html">Cidade</a></li>
+        <li><a href="contatos.html">contatos</a></li>
+    </ul>
 
     <img src="img/jacmel4.jpeg" height="60%" width="100%">
     <h1>
