--- a/contatos.html
+++ b/contatos.html
@@ -1,6 +1,14 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+ <link rel="stylesheet" href="stilo5.css">   
 <head>
+    <ul id="Menu-h">
+        <li><a href="index.html">Menu</a></li>
+        <li><a href="biografia.html">Biografia</a></li>
+        <li><a href="escolaridade.html">escolaridade</a> </li>
+        <li><a href="cidade.html">Cidade</a></li>
+        <li><a href="contatos.html">contatos</a></li>
+    </ul>
     <img src="img/contact-us-1908762.png" height="70%" width="100%">
 <h1 style="color: black;">
     Use qualquer uma das Redes sociais para entrar em contato conosco!!!
