--- a/cidade.html
+++ b/cidade.html
@@ -57,7 +57,7 @@ A cidade não mudou muito desde o século XIX, quando a era lar de abastados com
 <h4 style="color: red;">
     Jacmel a referêcia a meteria turisticas
     <p>
-        "SEJA BEM VINDO A MINHA CIDADES"
+        "SEJA BEM VINDO A MINHA CIDADE"
     </p>
 </h4>
 </body>
